--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,8 +2,10 @@ name: Build
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - "master"
   pull_request:
+  workflow_dispatch:
 
 jobs:
   build:
