--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
     inputs:
       tag:
-        description: Tag for release (for example v1.0.0)
+        description: Release tag (for example v1.0.0)
         required: true
         type: string
 
